--- a/third/index.css
+++ b/third/index.css
@@ -49,3 +49,18 @@
 
 }
 
+
+@media only screen and (max-height: 600px) {
+  .textholder {
+    font-size: 16px;
+  }
+}
+
+@media only screen and (max-height: 450px) {
+  .textholder {
+    font-size: 12px;
+  }
+}
+
+
+
